refactor: correcoes apontadas pelo sonarqube